--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,7 @@ body {
 /* ---HEADER----- */
 
 .header {
+  width: 100%;
   padding-top: 24px;
   padding-bottom: 24px;
 }
@@ -114,6 +115,7 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--first-btn-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-item:not(:last-child) {
@@ -159,6 +161,7 @@ body {
   line-height: 1.21;
   letter-spacing: 0.02em;
   color: var(--second-btn-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-link:hover,
@@ -170,6 +173,21 @@ body {
 .list-btn:hover,
 .list-btn:focus {
   color: var(--accent-color);
+}
+
+.current {
+  position: relative;
+}
+
+.current ::after {
+  content: "";
+  width: 48px;
+  height: 4px;
+  border-radius: 2px;
+  position: absolute;
+  background-color: #2196f3;
+  left: 0;
+  bottom: -32px;
 }
 
 /*---- HERO----- */
@@ -225,6 +243,16 @@ body {
   margin-left: 500px;
   padding: 10px 32px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.hero-btn:hover,
+.hero-btn:focus {
+  color: #ffffff;
+  background-color: #2196f3;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
 }
 
@@ -301,6 +329,28 @@ body {
   margin-left: 30px;
 }
 
+.work-item-wrap {
+  position: relative;
+}
+
+.work-img-text {
+  position: absolute;
+  top: 224px;
+  left: 0;
+  background: rgba(47, 48, 58, 0.8);
+  color: #ffffff;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  padding: 27px 82px;
+  width: 100%;
+}
+
 .about {
   background-color: #f5f4fa;
   padding-bottom: 94px;
@@ -371,10 +421,10 @@ img {
   width: 44px;
   height: 44px;
   display: flex;
-
   justify-content: center;
   align-items: center;
   border-radius: 50%;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-social-icon {
@@ -438,6 +488,7 @@ img {
   box-sizing: border-box;
   border-radius: 4px;
   fill: #afb1b8;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-list {
@@ -535,6 +586,7 @@ img {
   justify-content: center;
   align-items: center;
   border-radius: 50%;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-icon {
@@ -598,6 +650,7 @@ img {
   letter-spacing: 0.03em;
   color: #212121;
   padding: 6px 22px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .list-btn:hover,
@@ -613,18 +666,51 @@ img {
   display: flex;
   flex-wrap: wrap;
   margin-left: -30px;
+  margin-bottom: -30px;
 }
 
 .card-portfolio {
   width: calc(100% / 3 - 30px);
   margin-left: 30px;
+  margin-bottom: 30px;
   border: 1px solid #eeeeee;
+}
+
+.portfolio-item-wrap {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-img-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(33, 150, 243, 0.9);
+  color: #ffffff;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  padding: 63px 24px;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.card-portfolio:hover .portfolio-img-text {
+  transform: translateY(0);
 }
 
 .card-portfolio:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
   cursor: pointer;
+}
+
+.card-portfolio:focus .portfolio-img-text {
+  transform: translateY(0);
 }
 
 .card-title {
@@ -644,4 +730,51 @@ img {
   line-height: 1.87;
   letter-spacing: 0.03em;
   color: var(--second-btn-color);
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+  transition: opacity 500ms, visibility 500ms;
+}
+
+.backdrop.is-hidden.modal {
+  transform: scale(0.5);
+}
+
+.modal {
+  width: 528px;
+  min-height: 581px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 500ms;
+}
+
+.modal-close {
+  width: 30px;
+  height: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+}
+
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
 }
