--- a/css/styles.css
+++ b/css/styles.css
@@ -181,7 +181,7 @@ body {
 
 .current ::after {
   content: "";
-  width: 48px;
+  width: 100%;
   height: 4px;
   border-radius: 2px;
   position: absolute;
@@ -424,7 +424,7 @@ img {
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-social-icon {
@@ -469,7 +469,7 @@ img {
 .clients-content:focus,
 .clients-content:hover {
   outline: none;
-  border-color: #2196f3;
+  border-color: var(--accent-color);
 }
 
 .clients-title {
@@ -486,9 +486,10 @@ img {
   display: flex;
   border: 1px solid #afb1b8;
   box-sizing: border-box;
-  border-radius: 4px;
   fill: #afb1b8;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border-radius: 4px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-list {
@@ -586,7 +587,7 @@ img {
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-icon {
@@ -596,11 +597,6 @@ img {
 .footer-social-link:hover,
 .footer-social-link:focus {
   background-color: var(--accent-color);
-}
-
-.footer-social-link:hover .footer-social-icon,
-.footer-social-link:focus .footer-social-icon {
-  fill: #ffffff;
 }
 
 /*----- PORTFOLIO -----*/
